--- a/_posts/2021-07-03-measure.markdown
+++ b/_posts/2021-07-03-measure.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Measures"
 date:   2021-07-03 07:00:00 +0700
 categories: [random-stuffs, measure-theory]
+description: a brief look into measure theory
 comments: true
 ---
 ![Lego](/assets/images/lego.jpg)  
