--- a/_posts/2021-07-25-dp-in-mdp.markdown
+++ b/_posts/2021-07-25-dp-in-mdp.markdown
@@ -4,7 +4,7 @@ title:  "Dynamic Programming Algorithms For Solving Markov Decision Processes"
 date:   2021-07-25 15:30:00 +0700
 categories: [artificial-intelligent, reinforcement-learning]
 tags: artificial-intelligent reinforcement-learning
-description: Dynamaic programming algorithms for solving Markov Decision Processes (MDPs)
+description: Dynamic programming algorithms for solving Markov Decision Processes (MDPs)
 comments: true
 ---
 > In two previous posts, [**Markov Decision Process (MDP) and Bellman equations**]({% post_url 2021-06-27-mdp-bellman-eqn %}) and [**Optimal Policy Existence**]({% post_url 2021-07-10-optimal-policy-existence %}), we have known how MDPs, Bellman equations are defined and how they work. In this post, we are going to talk about how these MDPs are solved with **Dynamic Programming**.  
